// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: SetupSending disables the verification button while submitting 1`] = `
Array [
  Object {
    "color": "orange",
    "content": "Verifying...",
    "disabled": true,
    "id": "verify-dkim",
    "onClick": [Function],
  },
]
`;

exports[`Component: SetupSending renders correctly for unverified DKIM and invalid ownership with mailbox verification disabled 1`] = `
<SendingDomainSection
  title="Set Up For Sending"
>
  <Left>
    <p>
      <strong>
        To use this domain for sending
      </strong>
      , add this TXT record to your DNS settings, paying close attention to the specified hostname.
    </p>
  </Left>
  <Right>
    <Panel
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Verify TXT Record",
            "disabled": false,
            "id": "verify-dkim",
            "onClick": [Function],
          },
        ]
      }
      sectioned={true}
      title={
        <React.Fragment>
          <ErrorIcon />
           
          <span>
            DNS Settings
          </span>
        </React.Fragment>
      }
    >
      <LabelledValue
        label="Type"
      >
        <p>
          TXT
        </p>
      </LabelledValue>
      <LabelledValue
        label="Hostname"
      >
        <p>
          scph0118._domainkey.xyz.com
        </p>
      </LabelledValue>
      <LabelledValue
        label="Value"
      >
        <p>
          v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB
        </p>
      </LabelledValue>
    </Panel>
  </Right>
</SendingDomainSection>
`;

exports[`Component: SetupSending renders correctly for unverified DKIM and invalid ownership with mailbox verification enabled 1`] = `
<SendingDomainSection
  title="Set Up For Sending"
>
  <Left>
    <React.Fragment>
      <p>
        <strong>
          To use this domain for sending
        </strong>
        , add this TXT record to your DNS settings, paying close attention to the specified hostname.
      </p>
      <p>
        We recommend DNS verification, but if you don't have DNS access, you can 
        <UnstyledLink
          id="verify-with-email"
          onClick={[Function]}
        >
           set this domain up for sending via email.
        </UnstyledLink>
      </p>
    </React.Fragment>
  </Left>
  <Right>
    <Panel
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Verify TXT Record",
            "disabled": false,
            "id": "verify-dkim",
            "onClick": [Function],
          },
        ]
      }
      sectioned={true}
      title={
        <React.Fragment>
          <ErrorIcon />
           
          <span>
            DNS Settings
          </span>
        </React.Fragment>
      }
    >
      <LabelledValue
        label="Type"
      >
        <p>
          TXT
        </p>
      </LabelledValue>
      <LabelledValue
        label="Hostname"
      >
        <p>
          scph0118._domainkey.xyz.com
        </p>
      </LabelledValue>
      <LabelledValue
        label="Value"
      >
        <p>
          v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB
        </p>
      </LabelledValue>
    </Panel>
  </Right>
</SendingDomainSection>
`;

exports[`Component: SetupSending renders correctly when ownership and DKIM are verified 1`] = `
<SendingDomainSection
  title="Set Up For Sending"
>
  <Left />
  <Right>
    <Panel
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Re-verify TXT Record",
            "disabled": false,
            "id": "verify-dkim",
            "onClick": [Function],
          },
        ]
      }
      sectioned={true}
      title={
        <React.Fragment>
          <VerifiedIcon />
           
          <span>
            DNS Settings
          </span>
        </React.Fragment>
      }
    >
      <LabelledValue
        label="Type"
      >
        <p>
          TXT
        </p>
      </LabelledValue>
      <LabelledValue
        label="Hostname"
      >
        <p>
          scph0118._domainkey.xyz.com
        </p>
      </LabelledValue>
      <LabelledValue
        label="Value"
      >
        <p>
          v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB
        </p>
      </LabelledValue>
    </Panel>
  </Right>
</SendingDomainSection>
`;

exports[`Component: SetupSending renders correctly when ownership is valid and DKIM is unverified 1`] = `
<SendingDomainSection
  title="Set Up For Sending"
>
  <Left>
    <p>
      This domain is 
      <strong>
        ready for sending
      </strong>
      , but if you plan to use it for sending, we still recommend that you add this TXT record to make it 
      <strong>
        ready for DKIM
      </strong>
       as well.
    </p>
  </Left>
  <Right>
    <Panel
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Verify TXT Record",
            "disabled": false,
            "id": "verify-dkim",
            "onClick": [Function],
          },
        ]
      }
      sectioned={true}
      title={
        <React.Fragment>
          <ErrorIcon />
           
          <span>
            DNS Settings
          </span>
        </React.Fragment>
      }
    >
      <LabelledValue
        label="Type"
      >
        <p>
          TXT
        </p>
      </LabelledValue>
      <LabelledValue
        label="Hostname"
      >
        <p>
          scph0118._domainkey.xyz.com
        </p>
      </LabelledValue>
      <LabelledValue
        label="Value"
      >
        <p>
          v=DKIM1; k=rsa; h=sha256; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7J/mQAVP9pynvD79opV/GD495pJWTWmHaEMymBO55y52gu2D23/CHbLys0KXszTAPOVS9x3HdRByeE1jIx41sZkWwDzxcyZH2NP5Mw3zNQWO4CqSGqrVPuukjIy5N3jmZnJ/V3IOkKnC3A+j76iIG42cVOgzoekbM3ZXSfwag+wIDAQAB
        </p>
      </LabelledValue>
    </Panel>
  </Right>
</SendingDomainSection>
`;
